fix: change style search panel

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </header>
 
     <main class="container-main">
+        <div class="search-values"></div>
+        <div class="list-films"></div>
     </main>
-
-    <footer class=container-footer""></footer>
 
     <script src="index.js" type="module"></script>
 </body>
