fix: change style item-nav

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <header class="container-header">
         <ul class="header-nav">
-            <li class="nav-popular">
+            <li class="nav-popular item-nav">
                 Popular
             </li>
-            <li class="nav-year">
+            <li class="nav-year item-nav">
                 Year
                 <ul class="block-year">
                     <li class="item-year">2022</li>
@@ -28,7 +28,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav-genres">
+            <li class="nav-genres item-nav">
                 Genres
                 <ul class="block-genres"></ul>   
             </li>
